bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: type boolean
var fini:boolean = false
         ^BDR:4: error: not found: value R
    if (litMessage()==R){
                      ^BDR:7: error: not found: value L
    }else if (litMessage()==L){
                            ^BDR:10: error: not found: value I
     }else if (litMessage()==I){
                             ^BDR:14: error: not found: value A
    }else if (litMessage()==A){
                            ^BDR:16: error: not found: value B
    }else if (litMessage()==B){
                            ^BDR:19: error: not found: value C
    }else if (litMessage()==C){
                            ^BDR:23: error: not found: value Z
    }else if (litMessage()==Z){
                            ^BDR:25: error: not found: value Y
    }else if (litMessage()==Y){
                            ^BDR:28: error: not found: value X
    }else if (litMessage()==X){
                            ^